@@ -3,21 +3,6 @@
      copyright notices and license terms. -->
 <tryton>
     <data>
-        <!-- stock.supply_request.line -->
-        <record model="ir.ui.view" id="supply_request_line_view_form">
-            <field name="model">stock.supply_request.line</field>
-            <field name="inherit"
-                ref="stock_supply_request.supply_request_line_view_form"/>
-            <field name="name">supply_request_line_form</field>
-        </record>
-
-        <record model="ir.ui.view" id="supply_request_line_view_list">
-            <field name="model">stock.supply_request.line</field>
-            <field name="inherit"
-                ref="stock_supply_request.supply_request_line_view_list"/>
-            <field name="name">supply_request_line_list</field>
-        </record>
-
         <!-- production -->
         <record model="ir.ui.view" id="production_view_form">
             <field name="model">production</field>
