@@ -1,8 +1,0 @@
-<?xml version="1.0"?>
-<!-- The COPYRIGHT file at the top level of this repository contains the full
-     copyright notices and license terms. -->
-<data>
-    <xpath expr="/tree/field[@name='delivery_date']" position="after">
-        <field name="prescription_required"/>
-    </xpath>
-</data>
