@@ -1,2 +1,4 @@
+* Use prescription required field from product
+
 Version 3.4.0 - 2015-01-22
 * Initial release
